--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,2 +1,25 @@
 $primary: #084ca5;
-$shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+$shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
+	rgba(0, 0, 0, 0.09) 0px -3px 5px;
+
+@font-face {
+	font-family: "CircularStd";
+	font-weight: lighter;
+	src: url(~@src/fonts/CircularStd/CircularStd-Light.otf) format("opentype");
+}
+
+@font-face {
+	font-family: "CircularStd";
+	font-weight: normal;
+	src: url(~@src/fonts/CircularStd/CircularStd-Book.otf) format("opentype");
+}
+
+@font-face {
+	font-family: "CircularStd";
+	font-weight: bold;
+	src: url(~@src/fonts/CircularStd/CircularStd-Bold.otf) format("opentype");
+}
+
+$themeColor: #f0f0f0;
+$bgColor: #c7c7c731;
+@import "~vue-slider-component/lib/theme/material.scss";
