--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -4,20 +4,30 @@ $shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, 
 
 @font-face {
 	font-family: "CircularStd";
-	font-weight: lighter;
+	font-weight: 100;
+	font-style: normal;
 	src: url(~@src/fonts/CircularStd/CircularStd-Light.otf) format("opentype");
 }
 
 @font-face {
 	font-family: "CircularStd";
 	font-weight: normal;
+	font-style: normal;
 	src: url(~@src/fonts/CircularStd/CircularStd-Book.otf) format("opentype");
 }
 
 @font-face {
 	font-family: "CircularStd";
 	font-weight: bold;
+	font-style: normal;
 	src: url(~@src/fonts/CircularStd/CircularStd-Bold.otf) format("opentype");
+}
+
+@font-face {
+	font-family: "CircularStd";
+	font-weight: 900;
+	font-style: normal;
+	src: url(~@src/fonts/CircularStd/CircularStd-Black.otf) format("opentype");
 }
 
 $themeColor: #f0f0f0;
