--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,4 +1,6 @@
-$primary: #084ca5;
+$primary: #940700;
+$border: #3c3c3c;
+$background: linear-gradient(-45deg, #0d0d0d 30%, #161616 100%);
 $shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px,
 	rgba(0, 0, 0, 0.09) 0px -3px 5px;
 
